# FootballDarts

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
rules/: standard.toml
scripts/: extract_phase_handlers.py
src/dart_football/: __init__.py  __main__.py
src/dart_football.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/dart_football/cli/: __init__.py  app.py  game_header.py  play_ui.py  session_startup.py
src/dart_football/cli/play_ui/: __init__.py  flows.py  prompt_event.py  shared.py
src/dart_football/display/: __init__.py  dart_help.py  field_visual.py  formatting.py
src/dart_football/engine/: __init__.py  event_codec.py  events.py  phases.py  session.py  state.py  transitions.py
src/dart_football/engine/transitions/: __init__.py  clock_and_timeouts.py  field_geometry.py  field_goal_and_punt.py  kickoff_resolution.py  phase_handlers.py  post_transition.py  scoring_setup.py  scrimmage_resolution.py  transition_core.py  types.py
src/dart_football/gui/: __init__.py  __main__.py  serve.py  server.py  ui_state.py
src/dart_football/gui/static/: app.js  index.html  styles.css
src/dart_football/rules/: __init__.py  loader.py  schema.py
tests/: conftest.py  test_display.py  test_gui.py  test_rules_loader.py  test_safety_overtime.py  test_scrimmage.py  test_session.py  test_session_load.py  test_transitions.py
