[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dart-football"
version = "0.1.0"
description = "CLI state machine for Dart Football (rules-driven)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "questionary>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
dart-football = "dart_football.cli.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
