[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dart-football"
version = "0.1.0"
description = "CLI state machine for Dart Football (rules-driven)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "questionary>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
gui = ["starlette>=0.40", "uvicorn[standard]>=0.30"]
dev = ["pytest>=8.0", "ruff>=0.8", "pre-commit>=4.0", "httpx>=0.27"]

[project.scripts]
dart-football = "dart_football.cli.app:main"
dart-football-gui = "dart_football.gui.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dart_football = ["gui/static/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
